--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">BombTime</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+    <string name="menu_new">New</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="start_now">start now</string>
+    <string name="menu_done">Done</string>
 </resources>
