--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_task_detail_activitya">TaskDetailActivity</string>
     <string name="title_activity_task_detail">TaskDetailActivity</string>
     <string name="menu_edit">Edit</string>
+    <string name="menu_delete">delete</string>
 </resources>
